# build_tests-cmake-deps_target_transitive_dependency

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  DummyCMake.cpp  DummyCMake.hpp  deps_target_transitive_dependency-config.cmake
test/: CMakeLists.txt  test_Dummy.cpp
